--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Fairy Forest</title>
 
     <link rel="stylesheet" href="css/main.css">
+    <link rel="shortcut icon" href="favicon.ico">
     <script src="libs/gsap/gsap.min.js" defer></script>
     <script src="libs/gsap/ScrollTrigger.min.js" defer></script>
     <script src="libs/gsap/ScrollSmoother.min.js" defer></script>
